# VTKlab

./: CMakeLists.txt  Helicopter.stl  main.cpp
